[add]部分模块升级并适配Java 17